     with values 'height' and 'width'
   * [modify_side] can set AI parameters now, using the [ai] syntax implemented
     for [side] declarations (patch #984)
   * allow 100% defense instead of cutting off at 99%, if out of range set to
     100% instead of 50 (debian bug #467253)
   * The UnitWML [unit] tag is changed to [unit_type].  [unit] will still
     be accepted for backwards compatibility until.  wmllint can safely
     do this up-conversion.
   * In SingleUnitWML and SideWML, the description= attribute is now id=. 
     description= will still be accepted for backwards compatibility.
     wmllint can safely do this up-conversion.
   * it's now possible to specify with loop= how many times a sample
     associated with a sound source should be played
   * new [switch] conditional command
 * miscellaneous and bug fixes:
   * wmlxgettext now print some context information about the strings
     extracted (patch #993)
   * Fixed network_worker to span at least one thread (bug #11238)
   * more comprehensive terrain type naming to avoid confusing displays such
     as 'Road (Grassland)' or 'Impassable mountain (Cavewall)'
     This also applies to the WML keys used in the stats :
     - grassland becomes flat
     - tundra becomes frozen
     - canyon becomes unwalkable
     - cavewall becomes impassable
   * added VICTORY_AND_DEFEAT_MUSIC macro - not wiring it in in trunk
     content, in the hope that we get engine support for this soon, but it's
     here to use in the meantime
   * remove an ancient wml update program which has been obsoleted by wmllint
   * added the boost regex dependency
   * added the sdl-ttf dependency
   * default gender selection now works correctly for units with
     only a female variant.  Fixes bug #11197.
   * Fixed a border case of unit portrait advancement on which generic portraits
     would be treated as character-specific (affected female Elvish Archer line;