@@ -26,12 +26,18 @@ Version 1.5.0-svn:
    * allow 100% defense instead of cutting off at 99%, if out of range set to
      100% instead of 50 (debian bug #467253)
    * The UnitWML [unit] tag is changed to [unit_type].  [unit] will still
-     be accepted for backwards compatibility until.  wmllint can safely
+     be accepted for backwards compatibility until 1.5.3.  wmllint can safely
      do this up-conversion.
    * In SingleUnitWML and SideWML, the description= attribute is now id=. 
      description= will still be accepted for backwards compatibility.
      wmllint can safely do this up-conversion.
-   * it's now possible to specify with loop= how many times a sample
+   * In SingleUnitWML and SideWML, the user_description= attribute is now 
+     name=. user_description= will still be accepted for backwards 
+     compatibility.  wmllint can safely do this up-conversion.
+   * In SingleUnitWML and SideWML, the geneate_description= attribute is
+     now generate_name=. generate_description= will still be accepted for 
+     backwards compatibility. wmllint can safely do this up-conversion.
+    * it's now possible to specify with loop= how many times a sample
      associated with a sound source should be played
    * new [switch] conditional command
  * miscellaneous and bug fixes:
